[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/variations/0/wordApp.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="StyleBoxFlat" id=3]
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="CircleShape2D" id=2]
radius = 96.0

[node name="Palabra" type="RigidBody2D"]
input_pickable = true
mass = 100.0
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="Ball" type="Panel" parent="."]
margin_right = 192.0
margin_bottom = 192.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ball"]
margin_right = 192.0
margin_bottom = 192.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.12549, 0.12549, 0.12549, 1 )
text = "texto"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 96, 96 )
shape = SubResource( 2 )
[connection signal="input_event" from="." to="." method="_on_Node2D_input_event"]
[connection signal="gui_input" from="Ball" to="." method="panelClicked"]
[connection signal="mouse_entered" from="Ball" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="Ball" to="." method="_mouse_exited"]
